[package]
name = "yaftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.13.0"
log = "0.4.14"
futures = "0.3.0"
async-std = {version = "1" , features = ["attributes"]}
console = "0.15.0"
tabled = "0.3.0"
chrono = "0.4.19"
path-absolutize = "3.0.11"
md-5 = "0.9.1"