[package]
name = "yaftp"
version = "0.1.1"
authors = ["b23r0 <b23r0@foxmail.com>"]
edition = "2021"
description = "Yet another File Transfer Protocol support with resume broken transfer & reverse mode & largefile implementation by Rust."
repository = "https://github.com/b23r0/yaftp"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.13.0"
log = "0.4.14"
futures = "0.3.0"
async-std = {version = "1" , features = ["attributes"]}
console = "0.15.0"
tabled = "0.3.0"
chrono = "0.4.19"
path-absolutize = "3.0.11"
md-5 = "0.9.1"
indicatif = "0.16.2"